# restconf_yang_network_automation

./: LICENSE  README.md  pyproject.toml
examples/: run_inventory.py
src/restconf_yang_automation/: __init__.py  client.py  models.py  yang_mapper.py
src/restconf_yang_automation/workflows/: __init__.py  inventory.py
tests/: test_client.py  test_yang_mapper.py
